--- a/src/pages/home/components/pricing/Pricing.module.css
+++ b/src/pages/home/components/pricing/Pricing.module.css
@@ -30,3 +30,9 @@
 .card.professional {
 	background: linear-gradient(180deg, #1e3448 99.99%, rgba(30, 52, 72, 0) 100%);
 }
+
+@media (max-width: 760px) {
+	.pricingTitle {
+		margin: 0 auto;
+	}
+}
